--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <tr><td class="style_td" style="text-align:left; width:155px;">読了時間表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-readingtime/">readingtime.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">シンタックスハイライト</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-highlightjs/">highlightjs.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">簡易かんばんボード</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-tinykanban/">tinykanban.inc.php</a></td></tr>
+<tr><td class="style_td" style="text-align:left; width:155px;">ブログカード</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-blogcard/">blogcard.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">CCライセンス表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-cc/">cc.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">各種アイコン表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-fa/">fa.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">セクション区切り表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-sb/">sb.inc.php</a></td></tr>
@@ -52,10 +53,6 @@
 <tr><td class="style_td" style="text-align:left; width:155px;">パノラマ画像表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-panorama/">panorama.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">画像ぼかし</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-blurimg/">blurimg.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">Base64画像表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-img64/">img64.inc.php</a></td></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">プレースホルダー画像</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-ph/">ph.inc.php</a></td></tr>
-<tr><th class="style_th" colspan="2" style="text-align:center;">デザイン</th></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">ダークモード対応</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-colorscheme/">colorscheme.inc.php</a></td></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">CSS加工フィルター</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-cssfilter/">cssfilter.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">SEO・ソーシャルディスカバリー</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">OGP metaタグ出力</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-ogp/">ogp.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">JSON-LD出力</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-jsonld/">jsonld.inc.php</a></td></tr>
@@ -64,7 +61,6 @@
 <tr><th class="style_th" colspan="2" style="text-align:center;">セキュリティー・制限</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">スパム対策</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-recaptcha3/">recaptcha3.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">スクリーンセーバー</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-screensaver/">screensaver.inc.php</a></td></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">IE遮断</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-ieblock/">ieblock.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">機能強化</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">PWA対応</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-pwa/">pwa.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">その他</th></tr>
@@ -99,7 +95,6 @@
 <tr><th class="style_th" colspan="2" style="text-align:center;">SNS</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">Twitter</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">twitter.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">記事</th></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">ウェブサイト全般</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">blogcard.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">note</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">note.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">スライド</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">SlideShare</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">slideshare.inc.php</a></td></tr>
