--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <tr><th class="style_th" colspan="2" style="text-align:center;">その他</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">Folding@home情報表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-fahstats/">fahstats.inc.php</a></td></tr>
 </tbody></table></div>
-
+<br/>
 <h4 id="content_1_3">外部サービス埋め込みプラグイン</h4>
 <p>各種ウェブサービスが提供している<span style="margin-right:.125em;max-width:0"></span>HTML<span style="margin-right:.125em;max-width:0"></span>ウィジェットを埋め込むためのプラグインです。</p>
 <div class="ie5"><table class="style_table" cellspacing="1" border="0"><tbody><tr><th class="style_th" style="text-align:center; width:155px;">ウェブサービス</th><th class="style_th" style="text-align:center; width:155px;">ファイル</th></tr>
@@ -125,12 +125,20 @@
 <tr><td class="style_td" style="text-align:left; width:155px;">Makuake</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">makuake.inc.php</a></td></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">GlobalGiving</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-embed-plugins/">globalgiving.inc.php</a></td></tr>
 </tbody></table></div>
-
+<br/>
 <h4 id="content_1_4">スキン</h4>
 <p>PukiWiki<span style="margin-right:.125em;max-width:0"></span>の見た目を変えるためのスキンです。</p>
 <div class="ie5"><table class="style_table" cellspacing="1" border="0"><tbody><tr><th class="style_th" style="text-align:center; width:155px;">スキン</th><th class="style_th" style="text-align:center; width:155px;">ファイル</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">イカスキン</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-ikaskin/">ika.skin.php</a></td></tr>
 </tbody></table></div>
+<br/>
+
+<h2 id="content_2_1">ブラウザー拡張機能</h2>
+
+<div class="ie5"><table class="style_table" cellspacing="1" border="0"><tbody><tr><th class="style_th" style="text-align:center; width:155px;">機能</th><th class="style_th" style="text-align:center; width:155px;">名称</th></tr>
+<tr><td class="style_td" style="text-align:left; width:155px;">字数カウンター</td><td class="style_td" style="text-align:left; width:155px;"><a href="./jisu/">字数</a></td></tr>
+</tbody></table></div>
+
 
 			</article>
 </main>
