--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <meta name="content-language" content="ja" itemprop="inLanguage" />
 <meta name="author" content="ika.monster" itemprop="author" />
 <meta name="title" content="ソフトウェア置場 - ikamonster.github.io" itemprop="headline" />
-<meta name="classification" content="wiki" />
 <meta name="format-detection" content="telephone=no" />
 <meta name="google-site-verification" content="_pzN1dcFPUaFYxcPlHEiya8gcZHC-Mw45k8oKt0IP6I" />
 <meta name="theme-color" content="#ffffff" />
@@ -139,8 +138,12 @@
 <tr><td class="style_td" style="text-align:left; width:155px;">文字数カウンター</td><td class="style_td" style="text-align:left; width:155px;"><a href="./jisu/">字数</a></td></tr>
 </tbody></table></div>
 
+<h2 id="content_3_1">その他</h2>
+<ul>
+	<li><a href="./lutconverter.html">LUT<span style="margin-right:.125em;max-width:0"></span>コンバーター</a></li>
+</ul>
 
-			</article>
+</article>
 </main>
 
 <footer id="footer">
