--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <h2 id="content_3_1">その他</h2>
 <ul>
-	<li><a href="./lutconverter.html">LUT<span style="margin-right:.125em;max-width:0"></span>コンバーター</a></li>
+	<li><a href="./lutconverter/">LUT<span style="margin-right:.125em;max-width:0"></span>コンバーター</a></li>
 </ul>
 
 </article>
