--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 <tr><td class="style_td" style="text-align:left; width:155px;">スクリーンセーバー</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-screensaver/">screensaver.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">機能強化</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">PWA対応</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-pwa/">pwa.inc.php</a></td></tr>
+<tr><td class="style_td" style="text-align:left; width:155px;">Markdown対応（対応マークアップ拡張）</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-parser-prototype/">parser.inc.php</a></td></tr>
 <tr><th class="style_th" colspan="2" style="text-align:center;">その他</th></tr>
 <tr><td class="style_td" style="text-align:left; width:155px;">Folding@home情報表示</td><td class="style_td" style="text-align:left; width:155px;"><a href="./pukiwiki-fahstats/">fahstats.inc.php</a></td></tr>
 </tbody></table></div>
