--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div class="ie5"><table class="style_table" cellspacing="1" border="0"><tbody>
 <tr><th class="style_th" style="text-align:center; width:155px;">機能</th><th class="style_th" style="text-align:center; width:155px;">名称</th></tr>
-<tr><td class="style_td" style="text-align:left; width:155px;">和文用文字数カウンター</td><td class="style_td" style="text-align:left; width:155px;"><a href="./jisu/">字数</a></td></tr>
+<tr><td class="style_td" style="text-align:left; width:155px;">文字数・単語数カウンター</td><td class="style_td" style="text-align:left; width:155px;"><a href="./jisu/">字数</a></td></tr>
 </tbody></table></div>
 
 <h2 id="content_1_1">PukiWiki<span style="margin-right:.125em;max-width:0"></span>プラグインとスキン</h2>
